syntax = "proto3";
package shentu.shield.v1alpha1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "shentu/shield/v1alpha1/shield.proto";

option go_package = "github.com/certikfoundation/shentu/x/shield/types";

// GenesisState defines the shield genesis state.
message GenesisState {
    option (gogoproto.equal) = false;
    option (gogoproto.goproto_getters) = false;

    string shield_admin = 1 [ (gogoproto.moretags) = "yaml:\"shield_admin\"" ];
    uint64 next_pool_id = 2 [ (gogoproto.moretags) = "yaml:\"next_pool_id\"" ];
    uint64 next_purchase_id = 3 [ (gogoproto.moretags) = "yaml:\"next_purchase_id\"" ];
    PoolParams pool_params = 4 [ (gogoproto.moretags) = "yaml:\"pool_params\"", (gogoproto.nullable) = false ];    
    ClaimProposalParams claim_proposal_params = 5 [ (gogoproto.moretags) = "yaml:\"claim_proposal_params\"", (gogoproto.nullable) = false ];    
    string total_collateral = 6 [ (gogoproto.moretags) = "yaml:\"total_collateral\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false ];
    string total_withdrawing = 7 [ (gogoproto.moretags) = "yaml:\"total_withdrawing\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false ];
    string total_shield = 8 [ (gogoproto.moretags) = "yaml:\"total_shield\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false ];
    string total_claimed = 9 [ (gogoproto.moretags) = "yaml:\"total_claimed\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false ];
    repeated cosmos.base.v1beta1.DecCoin fees = 10 [ (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins", (gogoproto.moretags) = "yaml:\"fees\"", (gogoproto.nullable) = false ];
    repeated Pool pools = 11 [ (gogoproto.moretags) = "yaml:\"pools\"", (gogoproto.nullable) = false ];
    repeated Provider providers = 12 [ (gogoproto.moretags) = "yaml:\"providers\"", (gogoproto.nullable) = false ];
    repeated Withdraw withdraws = 13 [ (gogoproto.moretags) = "yaml:\"withdraws\"", (gogoproto.nullable) = false ];
    string global_staking_pool = 14 [ (gogoproto.moretags) = "yaml:\"global_staking_pool\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false ];
    repeated Purchase purchases = 15 [ (gogoproto.moretags) = "yaml:\"purchases\"", (gogoproto.nullable) = false ];
    Reserve reserve = 16 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"reserve\""];
    repeated PendingPayout pending_payouts = 17 [ (gogoproto.moretags) = "yaml:\"pending_payouts\"", (gogoproto.nullable) = false ];
    BlockRewardParams block_reward_params = 18 [ (gogoproto.moretags) = "yaml:\"block_reward_params\"", (gogoproto.nullable) = false ];
}

// PoolParams defines the parameters for the shield pool.
message PoolParams {
    option (gogoproto.equal) = false;
    option (gogoproto.goproto_getters) = false;

    google.protobuf.Duration protection_period = 1 [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true, (gogoproto.moretags) = "yaml:\"protection_period\"" ];
    string shield_fees_rate = 2 [ (gogoproto.moretags) = "yaml:\"shield_fees_rate\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false ];
    google.protobuf.Duration withdraw_period = 3 [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true, (gogoproto.moretags) = "yaml:\"withdraw_period\"" ];
    string pool_shield_limit = 4 [ (gogoproto.moretags) = "yaml:\"pool_shield_limit\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false ];
    repeated cosmos.base.v1beta1.Coin min_shield_purchase = 5 [ (gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins" ];
    google.protobuf.Duration cooldown_period = 6 [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true, (gogoproto.moretags) = "yaml:\"cooldown_period\"" ];
    string withdraw_fees_rate = 7 [ (gogoproto.moretags) = "yaml:\"withdraw_fees_rate\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false ];
}

// ClaimProposalParams defines the parameters for the shield claim proposals.
message ClaimProposalParams {
    option (gogoproto.equal) = false;
    option (gogoproto.goproto_getters) = false;

    google.protobuf.Duration claim_period = 1 [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true, (gogoproto.moretags) = "yaml:\"claim_period\"" ];
    google.protobuf.Duration payout_period = 2 [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true, (gogoproto.moretags) = "yaml:\"payout_period\"" ];
    repeated cosmos.base.v1beta1.Coin min_deposit = 3 [ (gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins" ];
    string deposit_rate = 4 [ (gogoproto.moretags) = "yaml:\"deposit_rate\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false ];
    string fees_rate = 5 [ (gogoproto.moretags) = "yaml:\"fees_rate\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false ];
}

// BlockRewardParams defines the parameters for shield block reward.
message BlockRewardParams {
    option (gogoproto.equal) = false;
    option (gogoproto.goproto_getters) = false;

    string model_param_a = 1 [ (gogoproto.moretags) = "yaml:\"model_param_a\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false ];
    string model_param_b = 2 [ (gogoproto.moretags) = "yaml:\"model_param_b\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false ];
    string target_leverage = 3 [ (gogoproto.moretags) = "yaml:\"target_leverage\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false ];
}
